--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@ionic/vue": "^7.2.0",
     "@ionic/vue-router": "^7.2.0",
+    "axios": "^1.6.7",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
